--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: java-app-ingress
+  name: java-ingress
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
@@ -15,6 +15,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: java-app
+                name: java
                 port:
                   number: 8080
